[tool.poetry]
name = "goit-ds-hw16"
version = "0.1.0"
description = ""
authors = ["Lis198407 <lytvinenko.i@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
tensorflow = "^2.17.0"
matplotlib = "^3.9.2"
keras = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
